partial/force-app/main/default/objects/Amazon_Files__c/Amazon_Files__c.object-meta.xml
<CustomObject>
    <label>Property Images</label>
    <nameField>
        <label>Property File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>