partial/force-app/main/default/objects/Amazon_Files__c/fields/EPC__c.field-meta.xml
<CustomField>
    <fullName>EPC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPC</label>
    <type>Checkbox</type>
</CustomField>