partial/force-app/main/default/objects/Amazon_Files__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>jpeg</fullName>
            </value>
            <value>
                <fullName>png</fullName>
            </value>
            <value>
                <fullName>pdf</fullName>
            </value>
            <value>
                <fullName>docx</fullName>
            </value>
            <value>
                <fullName>txt</fullName>
            </value>
            <value>
                <fullName>xlsx</fullName>
            </value>
            <value>
                <fullName>csv</fullName>
            </value>
            <value>
                <fullName>mp3</fullName>
            </value>
            <value>
                <fullName>mp4</fullName>
            </value>
            <value>
                <fullName>wav</fullName>
            </value>
            <value>
                <fullName>wmv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>