partial/force-app/main/default/objects/Amazon_Files__c/fields/Floor_Plan__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Plan</label>
    <type>Checkbox</type>
</CustomField>