partial/force-app/main/default/objects/Amazon_Files__c/fields/Image_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_Name__c</fullName>
    <formula>MID( Name , 19,  LEN( Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Name</label>
    <type>Text</type>
</CustomField>