partial/force-app/main/default/objects/Amazon_Files__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Amazon_Files</relationshipName>
    <type>Lookup</type>
</CustomField>