partial/force-app/main/default/objects/Amazon_Files__c/fields/Path_Url__c.field-meta.xml
<CustomField>
    <fullName>Path_Url__c</fullName>
    <label>Path Url</label>
    <type>Url</type>
</CustomField>