partial/force-app/main/default/objects/Amazon_Files__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Id</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Amazon_Files</relationshipName>
    <type>Lookup</type>
</CustomField>