partial/force-app/main/default/objects/Amazon_Files__c/fields/Reapit_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Image_Url__c</fullName>
    <label>Reapit Image Url</label>
    <type>Url</type>
</CustomField>