partial/force-app/main/default/objects/Amazon_Files__c/fields/S3_Response__c.field-meta.xml
<CustomField>
    <fullName>S3_Response__c</fullName>
    <description>Save S3 Response from AWSIntegration Apex Class</description>
    <label>S3 Response</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>