partial/force-app/main/default/objects/Amazon_Files__c/fields/S3_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>S3_Response_Id__c</fullName>
    <label>S3_Response_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>