partial/force-app/main/default/objects/Amazon_Files__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Amazon_Files</relationshipName>
    <type>Lookup</type>
</CustomField>