partial/force-app/main/default/objects/Amazon_Files__c/fields/Website_DB_Id__c.field-meta.xml
<CustomField>
    <fullName>Website_DB_Id__c</fullName>
    <description>This field is used to identify file in External System</description>
    <externalId>true</externalId>
    <label>Website DB Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>